@@ -5,8 +5,12 @@ import lombok.*;
 import moodbuddy.moodbuddy.domain.diary.domain.type.*;
 import moodbuddy.moodbuddy.domain.diary.dto.request.save.DiaryReqSaveDTO;
 import moodbuddy.moodbuddy.domain.diary.dto.request.update.DiaryReqUpdateDTO;
-import moodbuddy.moodbuddy.global.common.base.BaseEntity;
-import moodbuddy.moodbuddy.global.common.base.MoodBuddyStatus;
+import moodbuddy.moodbuddy.domain.draftDiary.domain.DraftDiary;
+import moodbuddy.moodbuddy.domain.draftDiary.dto.request.DraftDiaryReqPublishDTO;
+import moodbuddy.moodbuddy.global.common.base.BaseTimeEntity;
+import moodbuddy.moodbuddy.global.common.base.type.DiaryFont;
+import moodbuddy.moodbuddy.global.common.base.type.DiaryFontSize;
+import moodbuddy.moodbuddy.global.common.base.type.MoodBuddyStatus;
 
 import java.time.LocalDate;
 import java.util.Map;
@@ -17,7 +21,7 @@ import java.util.Map;
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @Table(name = "diary")
-public class Diary extends BaseEntity {
+public class Diary extends BaseTimeEntity {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id")
@@ -39,10 +43,6 @@ public class Diary extends BaseEntity {
     @Enumerated(EnumType.STRING)
     @Column(name = "emotion")
     private DiaryEmotion emotion;
-
-    @Enumerated(EnumType.STRING)
-    @Column(name = "status", nullable = false)
-    private DiaryStatus status;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "subject")
@@ -76,14 +76,13 @@ public class Diary extends BaseEntity {
     @Column(name = "version", nullable = false)
     private Integer version;
 
-    public static Diary ofPublished(DiaryReqSaveDTO requestDTO, Long userId) {
+    public static Diary of(DiaryReqSaveDTO requestDTO, Long userId) {
         return Diary.builder()
                 .title(requestDTO.diaryTitle())
                 .date(requestDTO.diaryDate())
                 .content(requestDTO.diaryContent())
                 .weather(requestDTO.diaryWeather())
                 .emotion(null)
-                .status(DiaryStatus.PUBLISHED)
                 .summary(null)
                 .subject(null)
                 .userId(userId)
@@ -92,45 +91,47 @@ public class Diary extends BaseEntity {
                 .fontSize(requestDTO.diaryFontSize())
                 .thumbnail(
                         (requestDTO.diaryImageUrls() != null && !requestDTO.diaryImageUrls().isEmpty())
-                                ? requestDTO.diaryImageUrls().get(0)
+                                ? requestDTO.diaryImageUrls().getFirst()
                                 : null
                 )
                 .moodBuddyStatus(MoodBuddyStatus.ACTIVE)
                 .build();
     }
 
-    public static Diary ofDraft(DiaryReqSaveDTO requestDTO, Long userId) {
+    public static Diary publish(Long userId, DraftDiaryReqPublishDTO requestDTO) {
         return Diary.builder()
                 .title(requestDTO.diaryTitle())
                 .date(requestDTO.diaryDate())
                 .content(requestDTO.diaryContent())
                 .weather(requestDTO.diaryWeather())
                 .emotion(null)
-                .status(DiaryStatus.DRAFT)
                 .summary(null)
                 .subject(null)
                 .userId(userId)
                 .bookMark(false)
                 .font(requestDTO.diaryFont())
                 .fontSize(requestDTO.diaryFontSize())
+                .thumbnail(
+                        (requestDTO.diaryImageUrls() != null && !requestDTO.diaryImageUrls().isEmpty())
+                                ? requestDTO.diaryImageUrls().getFirst()
+                                : null
+                )
                 .moodBuddyStatus(MoodBuddyStatus.ACTIVE)
                 .build();
     }
 
     public void updateDiary(DiaryReqUpdateDTO requestDTO) {
         this.title = requestDTO.diaryTitle();
-        this.date = requestDTO.diaryDate();
         this.content = requestDTO.diaryContent();
         this.weather = requestDTO.diaryWeather();
         this.emotion = null;
-        this.status = DiaryStatus.PUBLISHED;
         this.summary = null;
         this.subject = null;
         this.font = requestDTO.diaryFont();
         this.fontSize = requestDTO.diaryFontSize();
         this.thumbnail =
-                (requestDTO.newImageUrls() != null && !requestDTO.newImageUrls().isEmpty())
-                        ? requestDTO.newImageUrls().getFirst()
+                (requestDTO.diaryImageUrls() != null && !requestDTO.diaryImageUrls().isEmpty())
+                        ? requestDTO.diaryImageUrls().getFirst()
                         : null;
     }
 
